--- a/config/sphinx.yml
+++ b/config/sphinx.yml
@@ -1,9 +1,18 @@
 development:
-  enable_star: 1
-  min_infix_len: 1
+ bin-path: '/usr/bin'
+ searchd_binary_name: 'searchd'
+ indexer_binary_name: 'indexer'
+ enable_star: 0
+ min_infix_len: 1
 test:
-  enable_star: 1
-  min_infix_len: 1
+ bin-path: '/usr/bin'
+ searchd_binary_name: 'searchd'
+ indexer_binary_name: 'indexer'
+ enable_star: 0
+ min_infix_len: 1
 production:
-  enable_star: 1
-  min_infix_len: 1
+ bin-path: '/usr/bin'
+ searchd_binary_name: 'searchd'
+ indexer_binary_name: 'indexer'
+ enable_star: 0
+ min_infix_len: 1
