--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ development:
   database: smart_city_guide_development
   pool: 5
   username: root
-  password: isabel2005
+  password:
   socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
@@ -28,7 +28,7 @@ test:
   database: smart_city_guide_test
   pool: 5
   username: root
-  password: isabel2005 
+  password:
   socket: /var/run/mysqld/mysqld.sock
 
 production:
@@ -38,5 +38,5 @@ production:
   database: smart_city_guide_production
   pool: 5
   username: root
-  password: isabel2005
+  password:
   socket: /var/run/mysqld/mysqld.sock
